--- a/styles.css
+++ b/styles.css
@@ -74,12 +74,15 @@ h2 > span {
   background-image: url('assets/bg.jpg');
   background-size: cover;
   flex: 0 0 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .nameBannerCol {
   padding: 12px 0;
   position: relative;
-  top: 200px;
+  top: 220px;
   background: rgba(0, 0, 0, 0.4);
   color: #fff;
   display: flex;
@@ -91,12 +94,8 @@ h2 > span {
 
 .credits {
   color: #ffffffa4;
-  position: absolute;
   text-align: center;
-  bottom: 10px;
-  left: 0;
-  right: 150px;
-  margin-right: 50%;
+  padding-bottom: 10px;
 }
 
 .formCol {
